# videoconnector

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: buildpublish.yml
proto/: videoconnector.proto
sample_config/: config.toml
src/: main.rs  video_adapter.rs
src/config/: config.rs
src/grpc/: grpc_connector.rs
src/opencv/: opencv_capture.rs
src/v4l/: v4l_capture.rs
