[package]
name = "videoconnector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v4l = "0.13.1"
opencv = "0.75.0"
image = "0.24.5"
base64 = "0.20.0"
gethostname = "0.4.1"

futures-executor = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }

toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"

tonic = { version = "0.8.3", features = ["transport", "tls"] }
prost = "0.11.3"
prost-types = "0.11.2"
protobuf = "3.2.0"

[build-dependencies]
tonic-build = "0.8.4"